--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node dist/server.js", 
+    "build": "npx babel ./ --out-dir dist --ignore client/**/*", 
+    "dev": "nodemon server.js",
+    "clean": "rm -rf dist", 
+    "build:prod": "npm run clean && npm run build && npm start"
   },
   "keywords": [],
   "author": "",
@@ -20,6 +23,8 @@
     "mongoose": "^8.9.5"
   },
   "devDependencies": {
+    "@babel/cli": "^7.26.4",
+    "@babel/preset-env": "^7.26.7",
     "nodemon": "^3.1.9"
   }
 }
